Module 13 Containerization using Docker/SmartInventoryDocker/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: inventory-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: inventory-backend

  template:
    metadata:
      labels:
        app: inventory-backend

    spec:
      containers:
        - name: inventory-backend

          image: smart-inventory-backend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 5000
