Module 13 Containerization using Docker/SmartInventoryDocker/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: inventory-service

spec:
  selector:
    app: inventory-backend

  type: NodePort

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
