Module 13 Containerization using Docker/SmartInventoryDocker/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: inventory-ingress

spec:
  rules:
    - host: inventory.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: inventory-service
                port:
                  number: 5000
